Fri Jul 17 10:26:28 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tools/XML/XML_Schema_Resolver.cpp:
          Resolved UNICODE compiler errors.

Fri Jul 17 07:06:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Node_Locator.h:
        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Module.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.h:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
        * ciao/Logger/File_Logger_Backend.cpp:
        * tests/CIAO_ComponentServer/Activator/client.cpp:
          Resolved UNICODE compiler errors.

        * docs/tutorials/Quoter/Simple/02.html:
          Removed reference toe CIDL.

Wed Jul 15 15:51:36 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/XMI.cpp:
        * tools/Config_Handlers/XSCRT/XML.hpp:

         Compile warning fixes.

Wed Jul 15 14:20:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Hello/Sender/starter.cpp:
          Fixed wchar problem

Wed Jul 15 13:17:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Deployment/DAnCE_Core.mpc:
          Fixed build orders

Tue Jul 14 20:34:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/viao_vcwarnings.mpb:
          Added vc10

Tue Jul 14 20:31:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dance_plan_launcher_base.mpc:
        * DAnCE/MPC/config/dance_plan_launcher_base.mpb:
          Moved to DAnCE and corrected extension

Tue Jul 14 20:14:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Deployment/DAnCE_Core.mpc